--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,13 @@
             <version>2.3.0</version>
         </dependency>
 
-	</dependencies>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>0.7.4</version>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
