--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
+####
+logging.level.org.hibernate=ERROR
+logging.level.org.springframework.web=DEBUG
+logging.level.pl.yahoo.pawelpiedel.Movies=DEBUG
+logging.file=${java.io.tmpdir}/application.log
+logging.level.=DEBUG
